# fbica

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
fbica/: __init__.py  bootstrap.py  dgp.py  imputer.py  metrics.py  simulation.py
notebooks/: 01_simulation_demo.ipynb  02_bootstrap_coverage.ipynb
tests/: conftest.py  test_dgp.py  test_imputer.py  test_metrics.py  test_simulation.py
