[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fbica"
version = "0.1.0"
description = "Factor-Based Imputation via Cross-sectional Averages"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tilman Bretschneider" },
    { name = "Yousef Kaddoura" },
]
requires-python = ">=3.8"
keywords = ["imputation", "panel data", "factor model", "econometrics", "missing data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "tqdm>=4.60",
    "scipy>=1.7",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "ipykernel",
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["fbica"]
omit = ["tests/*"]

